[tool.poetry]
name = "wombat"
version = "0.1.0"
description = ""
authors = ["Jack Edge <yellowbounder@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
rshell = "^0.0.31"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
